<resources>
    <string name="app_name">Explorer_kotlin</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
<!--    Fragment detail-->
    <string name="image_content">Image of the searched item</string>
    <string name="label_location_text">Location: </string>
    <string name="label_photographer_text">Secondary Creator: </string>
    <string name="label_date_text">Date: </string>

    <string name="next_arrow_content">Next item</string>
    <string name="back_arrow_content">Previous item</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="saved_instance_bundle_key">item_position</string>
    <string name="secondary_creator_na">N/A</string>
    <string name="bundle_key_detail_item_position">item_position</string>
    <string name="btn_search">search button</string>

<!--    fragment search-->

    <string name="introduction">This application helps you to explore the image archives of NASA. Let\'s explore. </string>
    <string name="label_query">Query</string>
    <string name="query_text">Milky way</string>
    <string name="label_start_year">Start year</string>
    <string name="start_year_text">1980</string>
    <string name="label_end_year">End year</string>
    <string name="end_year_text">1990</string>
    <string name="button_search_text">Search</string>
    <string name="button_search_content_description">Search</string>
    <string name="toast_search_criteria_required_msg">Please enter at least one of the search criteria</string>
    <string name="test_banner_unit_id">	ca-app-pub-3940256099942544/6300978111</string>
    <string name="AdView_content_description">This is a advertisement</string>
    <string name="progressBar_content_desc">Downloading data, please wait</string>
    <string name="default_query">earth</string>
    <string name="media_type">image</string>
    <string name="no_data_found_error_msg">"No data found for provided search key "</string>
    <string name="no_network_error_msg">Network error</string>

<!--    fragment overview-->
    <string name="no_prev_saved_data">No previous search result found.</string>

</resources>