<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.explorer_kotlin.search.SearchViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:context=".SearchFragment"
            >

            <TextView
                android:id="@+id/label_intro"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:padding="@dimen/label_intro_padding"
                android:text="@string/introduction"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                app:layout_constraintVertical_bias="@dimen/label_intro_vertical_bias"
                android:textSize="@dimen/title_text_size"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/search_fragment_intro_top"

                />

            <TextView
                android:id="@+id/label_query"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_percent="@dimen/search_criteria_label_width_constraint"
                android:text="@string/label_query"
                android:textSize="@dimen/query_label_text_size"
                android:textAlignment="viewEnd"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_intro"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="@dimen/label_query_vertical_bias"
                android:layout_marginStart="@dimen/label_margin_start"
                android:labelFor="@+id/et_query_input"


                />


            <AutoCompleteTextView
                android:id="@+id/et_query_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/search_criteria_edit_text_margin_start"
                android:completionThreshold="1"
                android:hint="@string/query_text"

                android:inputType="textVisiblePassword"
                android:textSize="@dimen/query_label_text_size"
                app:layout_constraintBottom_toBottomOf="@+id/label_query"
                app:layout_constraintTop_toTopOf="@+id/label_query"
                app:layout_constraintStart_toEndOf="@+id/label_query"
                app:layout_constraintWidth_percent="@dimen/search_criteria_edit_text_width_constraint"
                android:imeOptions="actionNext"
                android:nextFocusForward="@+id/et_start_year_input"
                android:nextFocusRight="@+id/et_start_year_input"
                android:nextFocusDown="@+id/et_start_year_input"
                android:textColorHint="@color/white"

                />

            <TextView
                android:id="@+id/label_start_year"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_percent="@dimen/search_criteria_label_width_constraint"
                android:text="@string/label_start_year"
                android:textSize="@dimen/query_label_text_size"
                android:textAlignment="viewEnd"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_query"
                android:layout_marginTop="@dimen/label_others_margin_top"
                android:layout_marginStart="@dimen/label_margin_start"
                android:labelFor="@+id/et_start_year_input"

                />

            <AutoCompleteTextView
                android:id="@+id/et_start_year_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/search_criteria_edit_text_margin_start"
                android:completionThreshold="1"
                android:hint="@string/start_year_text"
                android:inputType="date"
                android:textSize="@dimen/query_label_text_size"
                app:layout_constraintBottom_toBottomOf="@id/label_start_year"
                app:layout_constraintStart_toEndOf="@+id/label_start_year"
                app:layout_constraintTop_toTopOf="@+id/label_start_year"
                app:layout_constraintWidth_percent="@dimen/search_criteria_edit_text_width_constraint"
                android:imeOptions="actionNext"
                android:nextFocusForward="@+id/et_end_year_input"
                android:nextFocusRight="@+id/et_end_year_input"
                android:nextFocusDown="@+id/et_end_year_input"
                android:textColorHint="@color/white"

                />

            <TextView
                android:id="@+id/label_end_year"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_percent="@dimen/search_criteria_label_width_constraint"
                android:text="@string/label_end_year"
                android:textSize="@dimen/query_label_text_size"
                android:textAlignment="viewEnd"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_start_year"
                android:layout_marginTop="@dimen/label_others_margin_top"
                android:layout_marginStart="@dimen/label_margin_start"
                android:labelFor="@+id/et_end_year_input"

                />

            <AutoCompleteTextView
                android:id="@+id/et_end_year_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/search_criteria_edit_text_margin_start"
                android:completionThreshold="1"
                android:hint="@string/end_year_text"
                android:inputType="date"
                android:textSize="@dimen/query_label_text_size"
                app:layout_constraintBottom_toBottomOf="@id/label_end_year"
                app:layout_constraintStart_toEndOf="@+id/label_end_year"
                app:layout_constraintTop_toTopOf="@+id/label_end_year"
                app:layout_constraintWidth_percent="@dimen/search_criteria_edit_text_width_constraint"
                android:imeOptions="actionNext"
                android:nextFocusForward="@+id/button_search"
                android:nextFocusDown="@+id/button_search"
                android:nextFocusRight="@+id/button_search"
                android:textColorHint="@color/white"

                />

<!--            android:textColor="@drawable/button_text_color"
 style="?android:attr/borderlessButtonStyle"-->
            <Button
                android:id="@+id/button_search"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/button_search_content_description"
                android:nextFocusRight="@id/et_query_input"
                android:nextFocusUp="@id/et_query_input"
                android:text="@string/button_search_text"

                android:textSize="@dimen/search_button_text_size"
                android:onClick="@{() -> viewModel.btnSearchClicked()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/search_button_margin_top"
                app:layout_constraintTop_toBottomOf="@+id/label_end_year"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="60dp"
                />




        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>