<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Detail.DetailFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/sv_detail"
            >


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/constraint_layout_detail"
                android:paddingBottom="90dp"
                >

                <ImageView
                    android:id="@+id/iv_detail_image"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/image_content"
                    app:layout_constraintDimensionRatio="10:6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/avatars"

                    />



                <TextView
                    android:id="@+id/tv_detail_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_detail_image"
                    tools:text="Our Neighbor Andromeda"
                    android:layout_marginStart="@dimen/detail_group_margin_start"
                    android:layout_marginEnd="@dimen/detail_group_margin_start"
                    android:layout_marginTop="20dp"
                    android:textSize="@dimen/detail_title_text_size"
                    />


                <TextView
                    android:id="@+id/label_creator"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintWidth_percent="@dimen/label_creator_width_percent"
                    android:text="@string/label_photographer_text"
                    app:layout_constraintStart_toStartOf="@id/tv_detail_title"
                    app:layout_constraintTop_toBottomOf="@id/tv_detail_title"
                    android:layout_marginTop="8dp"
                    android:textSize="@dimen/detail_label_text_size"
                    android:maxLines="2"
                    style="@style/TextAppearance.AppCompat.Body2"

                    />

                <TextView
                    android:id="@+id/tv_creator"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintWidth_percent="@dimen/tv_creator_width_percent"
                    tools:text="NASA/ University of California/ University of Florida"
                    android:maxLines="4"
                    app:layout_constraintStart_toEndOf="@id/label_creator"
                    app:layout_constraintTop_toTopOf="@id/label_creator"
                    app:layout_constraintBaseline_toBaselineOf="@+id/label_creator"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="@dimen/detail_group_margin_start"
                    android:textSize="@dimen/detail_body_text_size"
                    android:gravity="start"

                    />

                <TextView
                    android:id="@+id/label_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_date_text"
                    app:layout_constraintStart_toStartOf="@id/label_creator"
                    app:layout_constraintTop_toBottomOf="@id/tv_creator"
                    android:layout_marginTop="16dp"
                    android:textSize="@dimen/detail_label_text_size"

                    style="@style/TextAppearance.AppCompat.Body2"
                    />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="25th February, 2010"
                    app:layout_constraintStart_toEndOf="@id/label_date"
                    app:layout_constraintTop_toTopOf="@id/label_date"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="@dimen/detail_group_margin_start"
                    android:textSize="@dimen/detail_body_text_size"

                    />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="This image was an observation of XYZ"
                    app:layout_constraintStart_toStartOf="@id/label_date"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/label_date"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginEnd="@dimen/description_text_margin_end"
                    android:layout_marginTop="16dp"
                    android:textSize="@dimen/detail_body_text_size"


                    />


                <ProgressBar
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:id="@+id/pb_detail"
                    android:visibility="invisible"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"

                    />

<!--                <TextView-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:id="@+id/tv_detail_error_msg"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="parent"-->
<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    android:gravity="center_horizontal"-->
<!--                    android:textSize="18sp"-->
<!--                    android:layout_marginTop="20dp"-->
<!--                    android:visibility="gone"-->
<!--                    android:text="@string/main_error_msg_general"-->
<!--                    android:textColor="@android:color/white"-->
<!--                    android:textAlignment="center"-->
<!--                    android:padding="12dp"-->

<!--                    />-->

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"

            android:id="@+id/iv_front_arrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/button_arrow_right"
            android:contentDescription="@string/next_arrow_content"
            android:nextFocusForward="@+id/iv_back_arrow"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="8dp"
            />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"

            android:id="@+id/iv_back_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/button_arrow_left"
            android:contentDescription="@string/back_arrow_content"
            android:nextFocusForward="@+id/iv_front_arrow"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            />


    </FrameLayout>
</layout>